# rayforce-py

./: .gitignore  .pre-commit-config.yaml  CORE_FIXES.md  FAILING_TESTS.md  GAPS.md  LICENCE  LICENSE  MANIFEST  MANIFEST.in  Makefile  README.md  UPGRADE.md  benchmark.py  context.md  context7.json  example.py  f53f57f5116a.ngrok-free.app  plan.md  pyproject.toml  pytest.ini  python_patch.mk  rayforce.i  raypy.c  requirements.txt  setup.py  test.py  test_repl_event_loop.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-wheels-cibuildwheel.yml  build-wheels.yml  coverage.yml  deploy-docs.yml
benchmark/: benchmarks.py  format.py  prepare.py  run.py
docs/: CNAME  mkdocs.yml  requirements.txt
docs/audit/: v1_to_v2.md
docs/core_bugs/: recursive_self_in_dag.md
docs/docs/: index.md
docs/docs/assets/: demo.cast
docs/docs/content/: CHANGELOG.md  faq.md  get-started.md  intro.md  license.md  lint.md  tests.md
docs/docs/css/: custom.css  hero.css
docs/overrides/: 404.html
docs/site/: 404.html  index.html
docs/site/assets/: demo.cast
docs/site/content/: faq.html  get-started.html  intro.html  license.html  lint.html  tests.html
docs/site/css/: custom.css  hero.css
docs/site/search/: search_index.js  search_index.json
rayforce/: __init__.py  __init__.pyi  _rayforce_c.pyi  cli.py  errors.py  ffi.py  migrate.py  rayforce_c.c
rayforce/capi/: rayforce_c.c  rayforce_c.h  raypy_binary.c  raypy_compat.h  raypy_constructors.c  raypy_conversion.c  raypy_dynlib.c  raypy_eval.c  raypy_init_from_buffer.c  raypy_init_from_py.c  raypy_io.c  raypy_ipc.c  raypy_iter.c  raypy_kdb.c  raypy_operations.c  raypy_queries.c  raypy_read_from_rf.c  raypy_readers.c  raypy_serde.c
rayforce/core/: ffi.py
rayforce/io/: __init__.py  ipc.py
rayforce/network/: __init__.py  ipc.py  utils.py  websocket.py
rayforce/network/tcp/: client.py  server.py
rayforce/network/websocket/: client.py  server.py
rayforce/plugins/: kdb.py  pandas.py  parquet.py  polars.py  pyarrow.py  raykx.py  sql.py
rayforce/types/: __init__.py  base.py  exceptions.py  fn.py  operators.py  registry.py  table.py
rayforce/types/containers/: __init__.py  dict.py  list.py  vector.py
rayforce/types/scalars/: __init__.py
rayforce/utils/: __init__.py  conversion.py  evaluation.py  ipc.py  websocket.py
raypy/: __init__.py  __init__.pyi  api.py  event_loop.py  math_operations.py  misc.py  obj.py  operations.py  rayforce.c  rayforce.i  raypy.c  repl.py  types.py
raypy/api/: __init__.py  creators.py  exceptions.py  helpers.py  ipc.py  queries.py  readers.py
raypy/core/: __init__.py  ffi.py
raypy/io/: __init__.py  ipc.py
raypy/ipc/: __init__.py  rayforce.py
raypy/math/: __init__.py  operations.py
raypy/operations/sort/: __init__.py  asc.py  desc.py  xasc.py  xdesc.py
raypy/plugins/: raykx.py
raypy/queries/: __init__.py  _lambda.py  expr.py  ij.py  insert.py  select.py  update.py  upsert.py  wj.py
raypy/types/: __init__.py  base.py  bool.py  char.py  common.py  container.py  date.py  dict.py  exceptions.py  float.py  fluent.py  guid.py  integer.py  list.py  llambda.py  operators.py  primitive.py  queries.py  registry.py  scalar.py  symbol.py  table.py  time.py  timestamp.py  unsigned.py
raypy/types/containers/: dict.py  list.py  vector.py
raypy/types/legacy/: container.py  scalar.py
raypy/types/scalar/: __init__.py  bool.py  char.py  date.py  float.py  guid.py  integer.py  symbol.py  time.py  timestamp.py  unsigned.py
raypy/utils/: __init__.py  conversion.py  evaluation.py
scripts/: announce-release.sh  prepare_build.sh  prepare_build_windows.ps1  release.sh  test_linux_versions.sh  test_macos_versions.sh
tests/: conftest.py  test_add.py  test_append_safety.py  test_cli.py  test_constants.py  test_ffi.py  test_fluent_syntax.py  test_garbage_collector.py  test_math_operations.py  test_migrate.py  test_new_features.py  test_numpy_compatibility.py  test_queries.py
tests/benchmark/: conftest.py  test_table_ops.py
tests/core/: test_ffi.py
tests/data_types/: test_base_methods.py  test_fn.py  test_null.py  test_registry.py
tests/data_types/containers/: test_dict.py  test_list.py  test_string.py  test_vector.py
tests/data_types/operators/: test_aggregation.py  test_arithmetic.py  test_comparison.py  test_mixins.py  test_operation_enum.py
tests/data_types/table/: conftest.py  test_join.py  test_order_by.py  test_pivot.py  test_select.py  test_storage_io.py  test_ungroup.py  test_upsert.py
tests/errors/: test_error_classes.py
tests/ffi/: test_constants.py  test_init_read.py  test_lifecycle.py
tests/fixtures/v1_blobs/: README.md  generate.py
tests/helpers/: __init__.py  assertions.py  constants.py  strategies.py
tests/math/: test_operations.py
tests/network/: conftest.py  test_ipc.py  test_utils.py  test_websocket.py
tests/network/tcp/: test_client.py  test_query_objects.py  test_server.py
tests/network/websocket/: conftest.py  test_client.py  test_query_objects.py  test_server.py
tests/plugins/: test_kdb.py  test_pandas.py  test_parquet.py  test_polars.py  test_pyarrow.py  test_raykx.py  test_sql.py
tests/pyext/: test_append_safety.py  test_numpy_compatibility.py  test_vector_slicing.py
tests/queries/: test_select.py
tests/types/: test_bool.py  test_char.py  test_container.py  test_date.py  test_float.py  test_fn.py  test_guid.py  test_integer.py  test_list.py  test_null.py  test_operators.py  test_registry.py  test_scalar.py  test_symbol.py  test_table.py  test_time.py  test_timestamp.py  test_unsigned.py
tests/types/containers/: test_dict.py  test_list.py  test_string.py  test_vector.py
tests/types/scalar/: test_bool.py  test_char.py  test_date.py  test_float.py  test_guid.py  test_integer.py  test_symbol.py  test_time.py  test_timestamp.py  test_unsigned.py
tests/utils/: test_conversion.py  test_evaluation.py  test_ipc.py  test_python_to_ray.py  test_serde.py  test_v1_verb_aliasing.py  test_websocket.py
(+158 files in other folders)
