[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rayforce_py"
version = "0.0.6"
description = "Python bindings for RayforceDB"
readme = "README.md"
authors = [{name = "Karim"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C"
]

[project.scripts]
rayforce = "rayforce.cli:main"

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-*"
skip = "*-win32 *-manylinux_i686 *-musllinux_*"
archs = ["auto64"]
before-build = "bash {project}/scripts/prepare_build.sh"

test-skip = "*"  # Skip tests for now

[tool.cibuildwheel.environment]
RAYFORCE_GITHUB = "https://github.com/RayforceDB/rayforce.git"

[tool.cibuildwheel.macos]
environment = { MACOSX_DEPLOYMENT_TARGET = "11.0" }
  
[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

before-all = [
    "yum install -y git",
    "yum groupinstall -y 'Development Tools'",
    "yum install -y clang llvm",
]
